--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/nle641999/BurnWhisper#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "connect-session-sequelize": "^7.1.5",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -28,9 +29,8 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "infinite-scroll": "^4.0.1",
     "mysql2": "^2.3.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "sequelize": "^6.25.6"
   },
   "devDependencies": {
